--- a/front-end-developer-1/class3.html
+++ b/front-end-developer-1/class3.html
@@ -16,7 +16,7 @@
             --very-light-pink: #564592;
             --text-input-field: #fff;
             --hospital-green: #8694ff;
-            --yellow: #f3d4e2;
+            --yellow: #fff;
             --pinkneon: #8694ff;
             --sm: 14px;
             --md: 16px;
