Added html basic markups and semantic

--- a/curso-definitivo-de-html-y-css/index.html
+++ b/curso-definitivo-de-html-y-css/index.html
@@ -4,17 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This page will display cat pjotos
-    ">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5968/5968267.png">
-
+    <meta name="description" content="This page will display cat photos">
+    <meta name="robots" content="index,follow">
+    <meta name=viewport " content="width=device-width, initial-scale=1.0 ">
+    <title>Index y su estructura básica: head - Platzi</title>
+    <link rel="icon " href="https://cdn-icons-png.flaticon.com/512/5968/5968267.png ">
+    <link rel="stylesheet " href="style.css ">
     <title>index.html</title>
-
 </head>
-
 <body>
-    <h1>aaaaa</h1>
-</body>
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <section>
+            <article>
 
+            </article>
+        </section>
+        <ul>
+            <li><a href=" ">ola</a></li>
+            <li><a href=" ">ola</a></li>
+            <li><a href=" ">ola</a></li>
+        </ul>
+        <ol>
+            <li><a href=" ">ola</a></li>
+            <li><a href=" ">ola</a></li>
+            <li><a href=" ">ola</a></li>
+        </ol>
+    </main>
+    <footer>
+
+    </footer>
+    <p>soy un texto</p>
+    <h1>Soy un título</h1>
+    <h2>Soy un título</h2>
+    <h3>Soy un título</h3>
+    <h4>Soy un título</h4>
+    <h5>Soy un título</h5>
+    <h6>Soy un título</h6>
+    <a href="# ">soy un link</a>
+</body>
 </html>
