added final touches to mobile view

--- a/responsive-design-mobile-first/index.html
+++ b/responsive-design-mobile-first/index.html
@@ -148,16 +148,16 @@
             </div>
             <section class="plans-container__slider">
                 <article class="plans-container__card">
-                    <p class="recommended">Recomendado</p>
+                    <p class="recommended ">Casual</p>
                     <div class="plan-info-container">
-                        <h3 class="plan-card__title">Pago Anual</h3>
-                        <p class="plan-card__price"> <span>$</span> 99</p>
-                        <p class="plan-card__saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <h3 class="plan-card__title">Pago Mensual</h3>
+                        <p class="plan-card__price"> <span>$</span> 19</p>
+                        <p class="plan-card__saving">*Ahorras nada comparado a cualquier plan.</p>
                         <button class="plan-card__ca plan-card__ca--1">Escoger este <span></span></button>
                     </div>
                 </article>
                 <article class="plans-container__card">
-                    <p class="recommended">Recomendado</p>
+                    <p class="recommended recommended--2">Recommended</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card__title">Pago Anual</h3>
                         <p class="plan-card__price"> <span>$</span> 99</p>
@@ -166,11 +166,11 @@
                     </div>
                 </article>
                 <article class="plans-container__card">
-                    <p class="recommended">Recomendado</p>
+                    <p class="recommended recommended--3">Worth it</p>
                     <div class="plan-info-container">
-                        <h3 class="plan-card__title">Pago Anual</h3>
-                        <p class="plan-card__price"> <span>$</span> 99</p>
-                        <p class="plan-card__saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <h3 class="plan-card__title">Pago de por vida</h3>
+                        <p class="plan-card__price"> <span>$</span> 499</p>
+                        <p class="plan-card__saving">*Ahorras la vida comparado al plan anual.</p>
                         <button class="plan-card__ca plan-card__ca--3">Escoger este <span></span></button>
                     </div>
                 </article>
@@ -182,13 +182,13 @@
         <section class="left">
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/" target="_blank">Linkedin</a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/corneliusfreud/">Instagram</a>
+                    <a href="https://www.instagram.com/corneliusfreud/" target="_blank">Instagram</a>
                 </li>
                 <li>
-                    <a href="https://github.com/CristianN998">Github</a>
+                    <a href="https://github.com/CristianN998" target="_blank">Github</a>
                 </li>
             </ul>
         </section>
