added my first blog

--- a/curso-maquetación-en-css/index.html
+++ b/curso-maquetación-en-css/index.html
@@ -7,28 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Blog</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="flaticon.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;300;400;500;700;800&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="home-body">
     <header>
-        <section>
-            <div>
-                <a href="/">Github</a>
-                <a href="/">Linkedin</a>
-                <a href="/">Twitter</a>
-                <a href="/">Instagram</a>
-                <a href="/">Youtube</a>
+        <section class="header-icons-container">
+            <div class="icons">
+                <a target="_blank" href="https://github.com/CristianN998"><i class="fa fa-github"></i></a>
+                <a target="_blank" href="https://wa.me/qr/EZFXYWQU35LRG1"><i class="fa fa-whatsapp"></i></a>
+                <a target="_blank" href="https://twitter.com/CristianN998"><i class="fa fa-twitter"></i></a>
+                <a target="_blank" href="https://www.instagram.com/corneliusfreud/"><i class="fa fa-instagram"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/"><i class="fa fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCJNxh91NILXWeuLCvhSwujw"><i class="fa fa-youtube"></i></a>
             </div>
         </section>
         <nav>
-            <section>
-                <a href="/">Logo</a>
+            <section class="nav-logo-container">
+                <a href="index.html"> <img src="assets/img/cricadev-logo-small.svg" alt=""> </a>
             </section>
-            <section>
-                <a href="perfil.html">Profile</a>
+            <section class="profile-link">
+                <a href="perfil.html">About me</a>
             </section>
         </nav>
     </header>
+    <main class="main">
+        <section class="main-description">
+            <p>Welcome to <a class="cricadev" href="">CricaDev</a> a site made for and by developers where knowledge is <strong>limitless.</strong></p>
+
+            <a class="main-button" href="blogs.html">Go now!</a>
+        </section>
+
+
+    </main>
 </body>
 
 </html>
