added course project done

--- a/curso-maquetación-en-css/blog.html
+++ b/curso-maquetación-en-css/blog.html
@@ -8,6 +8,7 @@
     <title>Mi Blog</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="flaticon.css">
+    <link rel="stylesheet" href="media-queries.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +29,7 @@
         </section>
         <nav>
             <section class="nav-logo-container">
-                <a href="blog.html"> <img src="assets/img/cricadev-logo-small.svg" alt=""> </a>
+                <a href="index.html"> <img src="assets/img/cricadev-logo-small.svg" alt=""> </a>
             </section>
             <section class="profile-link">
                 <a href="perfil.html">About me</a>
