--- a/curso-maquetación-en-css/index.html
+++ b/curso-maquetación-en-css/index.html
@@ -8,6 +8,7 @@
     <title>Mi Blog</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="flaticon.css">
+    <link rel="stylesheet" href="media-queries.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
