--- a/curso-maquetación-en-css/perfil.html
+++ b/curso-maquetación-en-css/perfil.html
@@ -50,9 +50,11 @@
                         he is focused on one goal, becoming a FullStack Developer...
 
                         <br> In terms of love, he has a beautiful girlfriend, who supports him and it's studying as hard as he is to become the best designer and frontend developer ever.
+                        <br>
+                        <br>
+                        <a href="" class="blogs-button profile-button">Read more...</a>
                     </p>
                     <br>
-                    <a href="" class="blogs-button">Read more...</a>
                 </div>
             </div>
         </section>
