added a css draw challenge

--- a/curso-pro-css-grid/dibujarte-css/index.html
+++ b/curso-pro-css-grid/dibujarte-css/index.html
@@ -60,7 +60,7 @@
             <div class="jacket-1"></div>
         </div>
         <div class="cricadev">
-            <a href=""><img src="cricadev-logo-small.svg" alt=""></a>
+            <a target="_blank" href="https://cristiann998.github.io/Desktop/curso-maquetación-en-css/index.html"><img src="cricadev-logo-small.svg" alt=""></a>
         </div>
         <section class="header-icons-container">
             <div class="icons">
