added first practice

--- a/curso-pro-css-grid/breaking-bad-project/index.html
+++ b/curso-pro-css-grid/breaking-bad-project/index.html
@@ -13,32 +13,38 @@
 </head>
 
 <body>
+    <h1>css grid practice by cricadev</h1>
     <div class="main-container">
         <div class="container1 container">
-            <div class="card1 card"></div>
+            <div class="card1 card">
+                grid-column-start: 1; grid-column-end: 3; grid-row-start: 1; grid-row-end: 2;
+            </div>
             <div class="card2 card"></div>
             <div class="card3 card"></div>
             <div class="card4 card"></div>
         </div>
         <div class="container2 container">
             <div class="card11 card"></div>
-            <div class="card22 card"></div>
+            <div class="card22 card">grid-column: 2/3; grid-row: 1/3;</div>
             <div class="card33 card"></div>
             <div class="card44 card"></div>
         </div>
         <div class="container3 container">
             <div class="card111 card"></div>
             <div class="card222 card"></div>
-            <div class="card333 card"></div>
+            <div class="card333 card">grid-column: 1/3; grid-row: 2/3;</div>
             <div class="card444 card"></div>
         </div>
         <div class="container4 container">
             <div class="card1111 card"></div>
             <div class="card2222 card"></div>
             <div class="card3333 card"></div>
-            <div class="card4444 card"></div>
+            <div class="card4444 card">grid-column: 1/2; grid-row: 1/3;</div>
         </div>
     </div>
+    <footer>
+        <h2>cricadev 2022</h2>
+    </footer>
 </body>
 
 </html>
