added delay transition program

--- a/curso-transform-transition/delay-transition/index.html
+++ b/curso-transform-transition/delay-transition/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1 class="dad">Transition timing function & delay</h1>
     <div class="container">
         <div class="circle1 circle">c</div>
         <div class="circle2 circle">r</div>
@@ -20,6 +21,9 @@
         <div class="circle7 circle">e</div>
         <div class="circle8 circle">v</div>
     </div>
+    <footer>
+        <p>made by cricadev</p>
+    </footer>
 </body>
 
 </html>
