added final touches to the course files

--- a/curso-transform-transition/transition-property/index.html
+++ b/curso-transform-transition/transition-property/index.html
@@ -15,8 +15,8 @@
         <h1>transform:translate</h1>
         <div class="container">
             <div class="box1 box">transform: translate (-20px, 20px);</div>
-            <div class="box2 box">transform: translate (20px, 20px);</div>
-            <div class="box3 box">transform: translate (-20px, -20px);</div>
+            <div class="box2 box">transform: translateY(50px);</div>
+            <div class="box3 box">transform: translateX(-50px);</div>
         </div>
         <h1>transform:scale</h1>
         <div class="container">
