--- a/front-end-mentor/nft-preview-card-component-main/index.html
+++ b/front-end-mentor/nft-preview-card-component-main/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | NFT preview card component</title>
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
 </head>
+
 <body>
+    <div class="wrapper">
+        <div class="card__container">
+            <figure class="img-container">
+                <img src="images/image-equilibrium.jpg" alt="image from a etherium" />
+            </figure>
 
-  Equilibrium #3429
+            <div class="card__info-text">
+                <div>
+                    <h1>Equilibrium #3429</h1>
+                    <p>Our Equilibrium collection promotes balance and calm.</p>
+                </div>
+                <div class="card__info-value">
+                    <div class="items-wrap">
+                        <span class="img"></span>
+                        <span class="eth">0.041 ETH</span>
+                    </div>
+                    <div class="items-wrap">
+                        <span class="img-clock"></span>
+                        <span class="timestamp"> 3 days left </span>
+                    </div>
+                </div>
+                <span class="line"></span>
+            </div>
+            <div class="footer">
+                <img src="images/image-avatar.png" alt="" />
+                <span>Creation of <strong class="bold">Jules Wyvern</strong> </span>
+            </div>
+        </div>
+    </div>
 
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
+      >Coded by <a href="https://github.com/cricadev">Cricadev</a>
+    </footer>
 </body>
+
 </html>
