added final touches to the dummy structure

--- a/practice-anims-mockup-css/index.html
+++ b/practice-anims-mockup-css/index.html
@@ -96,7 +96,10 @@
                         atque non est exercitationem ea incidunt consequuntur minima soluta vitae molestias, quas modi? Praesentium a repudiandae voluptas id vel. Atque ea ad quasi sed eligendi, reprehenderit ratione nostrum aspernatur saepe nemo delectus
                         libero maxime quos iure tempora soluta quae maiores. Eveniet in labore autem voluptatum sequi aspernatur odit at quis quidem. Laudantium, aut unde eos eius quod sit quos repellat molestiae qui voluptatem, fuga quisquam velit praesentium!
                     </p>
-                    <button><span></span>View Project</button>
+                    <button>
+              <img src="https://i.ibb.co/GWGgL9N/view-button.png" />
+              <span>VIEW PROJECT</span>
+            </button>
                 </div>
             </div>
         </section>
