added some changes to the responsive layout on laptop

--- a/practice-anims-mockup-css/index.html
+++ b/practice-anims-mockup-css/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="page">
+    <main class="page">
         <!-- Main Content -->
         <section class="container">
             <nav class="navbar">
@@ -45,11 +45,10 @@
                 <p>See our latest projects!</p>
             </section>
             <section class="side-content">
-                <p>CricaDev</p>
+                <h2>CricaDev</h2>
                 <img class="image-1" src="https://i.ibb.co/dtx5BZP/Cover.png" alt="" />
                 <img class="image-2" src="https://i.ibb.co/dtx5BZP/Cover.png" alt="" />
                 <img class="image-3" src="https://i.ibb.co/dtx5BZP/Cover.png" alt="" />
-
                 <div></div>
             </section>
             <section class="footer">
@@ -103,7 +102,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    </main>
 </body>
 <script>
     const modal = document.querySelector(".modal ");
