--- a/practice-anims-mockup-css/index.html
+++ b/practice-anims-mockup-css/index.html
@@ -18,7 +18,7 @@
         <section class="container">
             <nav class="navbar">
                 <div class="navbar__content">
-                    <a href="https://www.youtube.com">
+                    <a href="">
                         <img src="https://i.ibb.co/q1B3bvk/arrow-Recurso-3-2x.png" alt="" />
                     </a>
                     <ul>
@@ -35,6 +35,9 @@
                             <a href="">Contact</a>
                         </li>
                     </ul>
+                    <a class="menu" href="#">
+                        <img src="https://i.ibb.co/SVX2PHS/menu.png" alt="" />
+                    </a>
                 </div>
             </nav>
             <section class="main-content">
@@ -72,8 +75,12 @@
         <!-- MODAL -->
         <section class="modal hidden">
             <div class="modal__content">
-                <h2>Breaking Bad Project</h2>
-                <img id="modal__content--close" src="https://i.ibb.co/HGPG5TF/close-button.png" />
+                <div class="modal__title">
+                    <h2>Breaking Bad Project</h2>
+                    <img id="modal__content--close" src="https://i.ibb.co/
+                   HGPG5TF/close-button.png" />
+                </div>
+
                 <div class="modal__content--slider">
                     <input type="radio" name="slider-1" id="radio-1" checked />
                     <input type="radio" name="slider-1" id="radio-2" />
@@ -89,12 +96,13 @@
               /></label>
                     </div>
                 </div>
-                <div class="modal__content__button">
+                <div class="modal__content__text">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error eligendi esse suscipit accusantium necessitatibus fugiat minima voluptates tempore? Doloribus sapiente veniam minus quam reiciendis beatae deleniti aperiam ab sunt rem assumenda facilis, nam
-                        atque non est exercitationem ea incidunt consequuntur minima soluta vitae molestias, quas modi? Praesentium a repudiandae voluptas id vel. Atque ea ad quasi sed eligendi, reprehenderit ratione nostrum aspernatur saepe nemo delectus
-                        libero maxime quos iure tempora soluta quae maiores. Eveniet in labore autem voluptatum sequi aspernatur odit at quis quidem. Laudantium, aut unde eos eius quod sit quos repellat molestiae qui voluptatem, fuga quisquam velit praesentium!
+                        Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke.
+                        We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.
                     </p>
+                </div>
+                <div class="modal__content__button">
                     <button>
               <img src="https://i.ibb.co/GWGgL9N/view-button.png" />
               <span>VIEW PROJECT</span>
