added full page functcional on mobile home

--- a/project-build-1/index.html
+++ b/project-build-1/index.html
@@ -54,23 +54,22 @@
       <!-- </section> -->
       <section class="home" id="first">
         <div class="home__top">
-          <p class="home__number">01</p>
+          <p class="home__number" id="number">01</p>
         </div>
         <div class="home__title">
-          <h1>CONSTRUCCIÓN</h1>
+          <h1 id="title">CONSTRUCCIÓN</h1>
         </div>
         <div class="home__subtitle">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quae
-            ratione aliquid veritatis vero inventore repudiandae quasi possimus
-            quaerat quis.
+          <p id="text">
+            Normally, both your asses would be dead as fucking fried chicken,
+            but you happen to pull this shit while I'm in a transitional period
           </p>
         </div>
 
         <div class="home__figures">
-          <div class="square-01"></div>
-          <div class="square-02"></div>
-          <div class="square-03"></div>
+          <div class="square-01" id="change-image-01"></div>
+          <div class="square-02" id="change-image-02"></div>
+          <div class="square-03" id="change-image-03"></div>
         </div>
         <div class="home__scroll scroll">
           <a href="#second">
@@ -129,13 +128,19 @@
     </main>
     <footer class="footer">
       <div class="footer__social-01">
-        <img src="https://i.ibb.co/NNngYfz/facebook.png" alt="" />
+        <a href="">
+          <img src="https://i.ibb.co/NNngYfz/facebook.png" alt=""
+        /></a>
       </div>
       <div class="footer__social-02">
-        <img src="https://i.ibb.co/QY86n6M/instagram.png" alt="" />
+        <a href="">
+          <img src="https://i.ibb.co/QY86n6M/instagram.png" alt=""
+        /></a>
       </div>
       <div class="footer__social-03">
-        <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt="" />
+        <a href="">
+          <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt=""
+        /></a>
       </div>
     </footer>
   </body>
