added second page of the website almost finished

--- a/project-build-1/index.html
+++ b/project-build-1/index.html
@@ -32,13 +32,13 @@
         <div class="nav__links">
           <ul>
             <li>
-              <a href="">Inicio</a>
+              <a href="index.html">Inicio</a>
             </li>
             <li>
-              <a href="">Conócenos</a>
+              <a href="aboutus.html">Conócenos</a>
             </li>
             <li>
-              <a href="">Contáctanos</a>
+              <a href="contactus.html">Contáctanos</a>
             </li>
           </ul>
         </div>
