added third page of the website completely functional for mobile devices

--- a/project-build-1/contactus.html
+++ b/project-build-1/contactus.html
@@ -45,11 +45,39 @@ png" alt="logo de la empresa" />
             </div>
         </nav>
     </header>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+
+    <main class="about">
+        <section class="about__text">
+            <p>¿Listo para comenzar un nuevo proyecto con nosotros?</p>
+            <h3>¡Contáctanos!</h3>
+            <img src="https://i.ibb.co/yQhcjjV/LOGO-EMPRESA1-1.png" alt="" />
+        </section>
+        <section class="about__contact">
+            <div class="contact__card-container">
+                <img src="https://i.ibb.co/yqxfzxL/contact-location-01.png" alt="" />
+                <div class="wrap-text">
+                    <p>Dirección</p>
+                    <p>--------------</p>
+                </div>
+            </div>
+
+            <div class="contact__card-container">
+                <img src="https://i.ibb.co/PgrpKcz/contact-location-02.png" alt="" />
+                <div class="wrap-text">
+                    <p>Teléfono</p>
+                    <p>3232854985</p>
+                </div>
+            </div>
+
+            <div class="contact__card-container">
+                <img src="https://i.ibb.co/KLz80RQ/contact-location-03.png" alt="" />
+                <div class="wrap-text">
+                    <p>Correo</p>
+                    <p>lorena.carillo1988@gmail.com</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <div class="footer__social-01">
             <a href="">
