added fully  responsiveness to the home page

--- a/project-build-1/aboutus.html
+++ b/project-build-1/aboutus.html
@@ -49,6 +49,7 @@ png" alt="logo de la empresa" />
         <section class="contact__main">
             <div class="img-container">
                 <img src="https://i.ibb.co/9bFknCP/contact-home-image.jpg" alt="">
+                <div class="background"></div>
             </div>
             <div class="main__text">
                 <div class="main__title">
