--- a/project-build-1/index.html
+++ b/project-build-1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,140 +10,118 @@
     <link rel="icon" href="https://i.ibb.co/yQhcjjV/LOGO-EMPRESA1-1.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;700&display=swap" rel="stylesheet" />
+</head>
 
-  <body>
+<body>
     <header>
-      <nav class="nav">
-        <div class="nav__logo">
-          <img
-            src="https://i.ibb.co/yQhcjjV/LOGO-EMPRESA1-1.png"
-            alt="logo de la empresa"
-          />
-        </div>
-        <a href="#" class="nav__toggle-button">
-          <span class="bar-1"></span>
-          <span class="bar-2"></span>
-          <span class="bar-3"></span>
-        </a>
-        <div class="nav__links">
-          <ul>
-            <li>
-              <a href="index.html">Inicio</a>
-            </li>
-            <li>
-              <a href="aboutus.html">Conócenos</a>
-            </li>
-            <li>
-              <a href="contactus.html">Contáctanos</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="nav">
+            <div class="nav__logo">
+                <img src="https://i.ibb.co/yQhcjjV/LOGO-EMPRESA1-1.png" alt="logo de la empresa" />
+            </div>
+            <a href="#" class="nav__toggle-button">
+                <span class="bar-1"></span>
+                <span class="bar-2"></span>
+                <span class="bar-3"></span>
+            </a>
+            <div class="nav__links">
+                <ul>
+                    <li>
+                        <a href="index.html">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="aboutus.html">Conócenos</a>
+                    </li>
+                    <li>
+                        <a href="contactus.html">Contáctanos</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <main>
-      <!-- Loader -->
-      <!-- <section class="loader"> -->
-      <!-- <div></div> -->
-      <!-- <div></div> -->
-      <!-- <div></div> -->
-      <!-- </section> -->
-      <section class="home" id="first">
-        <div class="home__top">
-          <p class="home__number" id="number">01</p>
-        </div>
-        <div class="home__title">
-          <h1 id="title">CONSTRUCCIÓN</h1>
-        </div>
-        <div class="home__subtitle">
-          <p id="text">
-            Normally, both your asses would be dead as fucking fried chicken,
-            but you happen to pull this shit while I'm in a transitional period
-          </p>
-        </div>
+        <!-- Loader -->
+        <!-- <section class="loader"> -->
+        <!-- <div></div> -->
+        <!-- <div></div> -->
+        <!-- <div></div> -->
+        <!-- </section> -->
+        <section class="home" id="first">
+            <div class="home__top">
+                <p class="home__number" id="number">01</p>
+            </div>
+            <div class="home__title">
+                <h1 id="title">CONSTRUCCIÓN</h1>
+            </div>
+            <div class="home__subtitle">
+                <p id="text">
+                    Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period
+                </p>
+            </div>
 
-        <div class="home__figures">
-          <div class="square-01" id="change-image-01"></div>
-          <div class="square-02" id="change-image-02"></div>
-          <div class="square-03" id="change-image-03"></div>
-        </div>
-        <div class="home__scroll scroll">
-          <a href="#second">
-            <img src="https://i.ibb.co/HTWRtF4/scroll-down.png" alt="scroll" />
-          </a>
-        </div>
-      </section>
-      <section class="gallery" id="second">
-        <div class="gallery__title">
-          <h2>Galería</h2>
-        </div>
-        <div class="gallery__container">
-          <div class="card-01 card" id="changeImage">
-            <img src="https://i.ibb.co/8cCLdrc/Martillo.png" alt="" />
-            <h3>text</h3>
-            <p>
-              Well, the way they make shows is, they make one show. That show's
-              called a pilot. Then they show that show to the people who make
-              shows, and on the strength of that one show they decide if they're
-              going to make more shows. Some pilots get picked and become
-              television programs. Some don't, become nothing. She starred in
-              one of the ones that became nothing.
-            </p>
-          </div>
-          <div class="card-02 card" id="changeImage">
-            <img src="https://i.ibb.co/YcYFhqV/Casa.png" alt="" />
-            <h3>text</h3>
-            <p>
-              Look, just because I don't be givin' no man a foot massage don't
-              make it right for Marsellus to throw Antwone into a glass
-              motherfuckin' house, fuckin' up the way the nigger talks.
-              Motherfucker do that shit to me, he better paralyze my ass, 'cause
-              I'll kill the motherfucker, know what I'm sayin'?
-            </p>
-          </div>
-          <div class="card-03 card" id="changeImage">
-            <img src="https://i.ibb.co/RzsbMdM/Pintura.png" alt="" />
-            <h3>text</h3>
-            <p>
-              Do you see any Teletubbies in here? Do you see a slender plastic
-              tag clipped to my shirt with my name printed on it? Do you see a
-              little Asian child with a blank expression on his face sitting
-              outside on a mechanical helicopter that shakes when you put
-              quarters in it? No? Well, that's what you see at a toy store. And
-              you must think you're in a toy store, because you're here shopping
-              for an infant named Jeb.
-            </p>
-          </div>
-        </div>
-        <div class="gallery__scroll scroll">
-          <a href="#first">
-            <img src="https://i.ibb.co/HTWRtF4/scroll-down.png" alt="scroll"
-          /></a>
-        </div>
-      </section>
+            <div class="home__figures">
+                <div class="square-01 square" id="change-image-01"></div>
+                <div class="square-02 square" id="change-image-02"></div>
+                <div class="square-03 square" id="change-image-03"></div>
+            </div>
+            <div class="home__scroll scroll">
+                <a href="#second">
+                    <img src="https://i.ibb.co/HTWRtF4/scroll-down.png" alt="scroll" />
+                </a>
+            </div>
+        </section>
+        <section class="gallery" id="second">
+            <div class="gallery__title">
+                <h2>Galería</h2>
+            </div>
+            <div class="gallery__container">
+                <div class="card-01 card" id="changeImage">
+                    <img src="https://i.ibb.co/8cCLdrc/Martillo.png" alt="" />
+                    <h3>text</h3>
+                    <p>
+                        Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become
+                        television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+                    </p>
+                </div>
+                <div class="card-02 card" id="changeImage">
+                    <img src="https://i.ibb.co/YcYFhqV/Casa.png" alt="" />
+                    <h3>text</h3>
+                    <p>
+                        Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll
+                        kill the motherfucker, know what I'm sayin'?
+                    </p>
+                </div>
+                <div class="card-03 card" id="changeImage">
+                    <img src="https://i.ibb.co/RzsbMdM/Pintura.png" alt="" />
+                    <h3>text</h3>
+                    <p>
+                        Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put
+                        quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
+                    </p>
+                </div>
+            </div>
+            <div class="gallery__scroll scroll">
+                <a href="#first">
+                    <img src="https://i.ibb.co/C8jNHmc/scroll-up.png" alt="scroll" /></a>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-      <div class="footer__social-01">
-        <a href="">
-          <img src="https://i.ibb.co/NNngYfz/facebook.png" alt=""
-        /></a>
-      </div>
-      <div class="footer__social-02">
-        <a href="">
-          <img src="https://i.ibb.co/QY86n6M/instagram.png" alt=""
-        /></a>
-      </div>
-      <div class="footer__social-03">
-        <a href="">
-          <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt=""
-        /></a>
-      </div>
+        <div class="footer__social-01">
+            <a href="">
+                <img src="https://i.ibb.co/NNngYfz/facebook.png" alt="" /></a>
+        </div>
+        <div class="footer__social-02">
+            <a href="">
+                <img src="https://i.ibb.co/QY86n6M/instagram.png" alt="" /></a>
+        </div>
+        <div class="footer__social-03">
+            <a href="">
+                <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt="" /></a>
+        </div>
     </footer>
-  </body>
-  <script src="script.js"></script>
+</body>
+<script src="script.js"></script>
+
 </html>
