added fully responsiveness to the second page of the website

--- a/project-build-1/aboutus.html
+++ b/project-build-1/aboutus.html
@@ -130,6 +130,7 @@ jpg" alt="" />
             <h2>Ubicación</h2>
             <div id="map" class="location__container"></div>
         </section>
+        <div class="space"></div>
 
     </main>
 
