added fully responsive and javascript debugged

--- a/project-build-1/contactus.html
+++ b/project-build-1/contactus.html
@@ -57,7 +57,7 @@ png" alt="logo de la empresa" />
                 <img src="https://i.ibb.co/yqxfzxL/contact-location-01.png" alt="" />
                 <div class="wrap-text">
                     <p>Dirección</p>
-                    <p>--------------</p>
+                    <p>Cra. 5 #14-35, Soacha, Cundinamarca</p>
                 </div>
             </div>
 
