--- a/project-build-1/index.html
+++ b/project-build-1/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="home__subtitle">
                 <p id="text">
-                    Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period
+                    Enchapes, mamposteria, estucados, techos pvc, ormamentación, estructuras, plomeria y más, ofrecemos calidad al precio adecuado
                 </p>
             </div>
 
