--- a/project-build-1/aboutus.html
+++ b/project-build-1/aboutus.html
@@ -58,8 +58,9 @@ png" alt="logo de la empresa" />
                     </p>
                 </div>
                 <div class="main__paragraph">
-                    <p>Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto
-                        Texto
+                    <p>Enchapes, mamposteria, estucados, techos pvc, ormamentación, estructuras, plomeria y más, ofrecemos calidad al precio adecuado, Como norma general utilizamos las mayúsculas para la primera letra de los nombres te ayudamos a realizar
+                        tus ideas y proyectos, sin excusas, sin trabas, puntuales y siempre atento a lo que tú necesitas.
+
                     </p>
                 </div>
 
@@ -72,25 +73,25 @@ png" alt="logo de la empresa" />
             <div class="team-wrapper">
                 <div class="team-icons team-icon-1">
                     <img src="https://i.ibb.co/RSxSyTZ/about-icon-01.png" alt="">
-                    <p>+5</p>
+                    <p>5</p>
                     <p>Años de experiencia</p>
                 </div>
                 <div class="team-icons team-icon-2">
                     <img src="https://i.ibb.co/S0RD68p/about-icon-02.png" alt="">
-                    <p>+40</p>
+                    <p>620</p>
                     <p>Trabajos finalizados</p>
                 </div>
                 <div class="team-icons team-icon-3">
                     <img src="https://i.ibb.co/yycVdH2/about-icon-03.png" alt="">
-                    <p>+8</p>
-                    <p>Puntos en bogotá</p>
+                    <p>1</p>
+                    <p>Puntos en Soacha</p>
                 </div>
             </div>
 
             <div class="team__our-team">
                 <div class="our-team__text">
                     <h2>Nuestro equipo</h2>
-                    <p>Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto </p>
+                    <p>Personas responsables, creativas y aplicadas dispuestas a transformar la realidad. </p>
                 </div>
 
                 <div class="modal__content--slider">
@@ -99,10 +100,9 @@ png" alt="logo de la empresa" />
                     <input type="radio" name="slider-1" id="radio-3" />
                     <div class="team__cards">
                         <label for="radio-1" class="team-card" id="team-card-1">
-                      <img src="https://i.ibb.co/Xzhg4jQ/our-team-img-01.
-jpg" alt="" />
+                      <img src="https://i.ibb.co/cCJjWQK/gustavo-parra.jpg" alt="" />
 
-<h3>Pepito Pérez</h3>
+<h3>Gustavo Parra</h3>
 <p>Constructor</p>
 
               </label>
