Added a game I'm doing for my first project with javascript

--- a/curso-basic-js/rock-paper-scissors-game/index.html
+++ b/curso-basic-js/rock-paper-scissors-game/index.html
@@ -1,1 +1,71 @@
-!  
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock Paper Scissors Game</title>
+    <link rel="icon" href="https://i.ibb.co/syQ7jR1/Frame-11.png" />
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <nav>
+        <a href=""><img src="https://i.ibb.co/hLMy38D/logocricadev.png" alt="cricadev logo" /></a>
+        <div class="menu">
+            <div class="bar-1"></div>
+            <div class="bar-2"></div>
+            <div class="bar-3"></div>
+        </div>
+    </nav>
+
+    <main>
+        <section>
+            <h1>ROCK PAPER SCISSORS</h1>
+            <p>VS</p>
+            <div class="cards-wrapper">
+                <div class="card-container">
+                    <div class="card__icon">
+                        <div class="card__img--over"></div>
+                    </div>
+                    <h2 class="card__title">YOU</h2>
+                    <p class="card__subtitle">1</p>
+                </div>
+                <div class="card-container">
+                    <div class="card__icon">
+                        <div class="card__img--over"></div>
+                    </div>
+                    <h2 class="card__title">CPU</h2>
+                    <p class="card__subtitle">0</p>
+                </div>
+            </div>
+            <p>YOU WON!</p>
+        </section>
+        <section>
+            <div class="table-container">
+                <div class="table__title">LATEST GAMES</div>
+                <div class="table__player-1">YOU</div>
+                <div class="table__player-2">CPU</div>
+                <div class="table__score-1">1</div>
+                <div class="table__score-2">0</div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="icons-container">
+            <div class="icon-1">
+                <a href=""><img src="" alt="" /></a>
+            </div>
+            <div class="icon-2">
+                <a href=""><img src="" alt="" /></a>
+            </div>
+            <div class="icon-3">
+                <a href=""><img src="" alt="" /></a>
+            </div>
+        </div>
+    </footer>
+</body>
+<script src="script.js"></script>
+
+</html>
