added fully responsive rock paper scissors project

--- a/curso-basic-js/rock-paper-scissors-game/index.html
+++ b/curso-basic-js/rock-paper-scissors-game/index.html
@@ -13,7 +13,10 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href=""><img src="https://i.ibb.co/hLMy38D/logocricadev.png" alt="cricadev logo" /></a>
+            <a href=""><img class="text-img" src="https://i.ibb.co/Mp3mVqR/Cricadev-color1x.png" alt="cricadev logo" /></a>
+
+            <a href=""><img src="https://i.ibb.co/dDffN6P/Logosolo-color1x.png" alt="cricadev logo" /></a>
+
             <div class="navbar__toggle">
                 <div class="bar-1"></div>
                 <div class="bar-2"></div>
@@ -62,6 +65,11 @@
                 </div>
             </div>
             <p class="win__text">YOU WON!</p>
+            <div class="buttons-container">
+                <input class="button" value="ROCK" type="text" />
+                <button class="button-main">PLAY</button>
+                <input class="button" value="SCISSORS" type="text" readonly />
+            </div>
         </section>
         <section>
             <div class="table-container">
@@ -70,6 +78,8 @@
                 <div class="table__player-2">CPU</div>
                 <div class="table__score-1">1</div>
                 <div class="table__score-2">0</div>
+                <div class="table__score-3">1</div>
+                <div class="table__score-4">0</div>
             </div>
         </section>
     </main>
