added some animations to the website

--- a/curso-basic-js/rock-paper-scissors-game/index.html
+++ b/curso-basic-js/rock-paper-scissors-game/index.html
@@ -8,6 +8,7 @@
     <title>Rock Paper Scissors Game</title>
     <link rel="icon" href="https://i.ibb.co/syQ7jR1/Frame-11.png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
