--- a/curso-basic-js/rock-paper-scissors-game/index.html
+++ b/curso-basic-js/rock-paper-scissors-game/index.html
@@ -87,13 +87,13 @@
     <footer>
         <div class="icons-container">
             <div class="icon-1">
-                <a href="https://github.com/cricadev"><img src="https://svgur.com/i/f0i.svg" alt="github logo" /></a>
+                <a target="_blank" href="https://github.com/cricadev"><img src="https://svgur.com/i/f0i.svg" alt="github logo" /></a>
             </div>
             <div class="icon-2">
-                <a href="linkedin.com/in/cristian-david-casallas-velandia-81630b174/"><img src="https://svgur.com/i/f1S.svg" alt="linkedin logo" /></a>
+                <a target="_blank" href="linkedin.com/in/cristian-david-casallas-velandia-81630b174/"><img src="https://svgur.com/i/f1S.svg" alt="linkedin logo" /></a>
             </div>
             <div class="icon-3">
-                <a href="https://www.instagram.com/corneliusfreud/"><img src="https://svgur.com/i/f0j.svg" alt="whatsapp logo" /></a>
+                <a target="_blank" href="https://www.instagram.com/corneliusfreud/"><img src="https://svgur.com/i/f0j.svg" alt="whatsapp logo" /></a>
             </div>
         </div>
     </footer>
