added fully JS to the page all features working as intended

--- a/curso-basic-js/rock-paper-scissors-game/index.html
+++ b/curso-basic-js/rock-paper-scissors-game/index.html
@@ -46,7 +46,7 @@
                     <div class="card__icon">
                         <img class="img-flag" src="https://flagicons.lipis.dev/flags/4x3/co.svg" alt="Colombia flag" />
                         <div class="card__img--over">
-                            <img src="https://svgur.com/i/f25.svg" alt="" />
+                            <img id="player-img" src="https://svgur.com/i/f25.svg" alt="" />
                         </div>
                     </div>
                     <h2 class="card__title">YOU</h2>
@@ -58,7 +58,7 @@
                     <div class="card__icon">
                         <img class="img-flag" src="https://flagicons.lipis.dev/flags/4x3/ar.svg" alt="Argentina flag" />
                         <div class="card__img--over">
-                            <img src="https://svgur.com/i/f12.svg" alt="" />
+                            <img id="cpu-img" src="https://svgur.com/i/f12.svg" alt="" />
                         </div>
                     </div>
                     <h2 class="card__title">CPU</h2>
@@ -103,8 +103,12 @@
                 <a target="_blank" href="https://www.instagram.com/corneliusfreud/"><img src="https://svgur.com/i/f0j.svg" alt="whatsapp logo" /></a>
             </div>
         </div>
+        <p>
+            Created with love by
+            <a href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Cricadev💚</a
+        >
+      </p>
     </footer>
-</body>
-<script src="script.js"></script>
-
+  </body>
+  <script src="script.js"></script>
 </html>
