completed responsive and functionality

--- a/project-build-1/contactus.html
+++ b/project-build-1/contactus.html
@@ -91,8 +91,12 @@ png" alt="logo de la empresa" />
             <a href="">
                 <img src="https://i.ibb.co/CKVHbtY/whatsapp.png" alt="" /></a>
         </div>
+        <p>
+            Created with love by
+            <a target="_blank" href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Cricadev💚</a
+        >
+      </p>
     </footer>
-</body>
-<script src="script.js"></script>
-
+  </body>
+  <script src="script.js"></script>
 </html>
