added cool footer

--- a/project-build-1/aboutus.html
+++ b/project-build-1/aboutus.html
@@ -153,8 +153,8 @@ png" alt="logo de la empresa" />
         <p>
             Created with love by
             <a target="_blank" href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Cricadev💚</a
-        >
-      </p>
+        >   and <a href=""> SteasDev💜</a>
+        </p>
     </footer>
 </body>
 <script src="script.js"></script>
