--- a/project-build-1/contactus.html
+++ b/project-build-1/contactus.html
@@ -95,8 +95,10 @@ png" alt="logo de la empresa" />
             Created with love by
             <a target="_blank" href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Cricadev💚</a
         >
-      </p>
+        and <a href=""> SteasDev💜</a>
+        </p>
     </footer>
-  </body>
-  <script src="script.js"></script>
+</body>
+<script src="script.js"></script>
+
 </html>
