--- a/project-build-1/index.html
+++ b/project-build-1/index.html
@@ -124,8 +124,10 @@
             Created with love by
             <a target="_blank" href="https://www.linkedin.com/in/cristian-david-casallas-velandia-81630b174/">Cricadev💚</a
         >
-      </p>
+        and <a href=""> SteasDev💜</a>
+        </p>
     </footer>
-  </body>
-  <script src="script.js"></script>
+</body>
+<script src="script.js"></script>
+
 </html>
